styles.css
body {
      background-color: #0C0C1A;
      margin:           0px;
      padding:          0px;
      overflow:         hidden;
      font-family: 'Maven Pro', sans-serif;
    }

    .axis line {
      fill:         none;
      stroke:       #CEE5ED;
      stroke-width: 1px;
    }
    .axis path {
      fill:            none;
      stroke:          #CEE5ED;
      stroke-width:    2.5px;
      shape-rendering: crispEdges;
    }
    .axis text {
      font: 12px sans-serif;
      /*shape-rendering: crispEdges;*/
      stroke-width:    1px;
      fill: white;
      font-color: #CEE5ED;
    }

    .bookEnd {
      fill:#BFFFEA;
    }
    .bookend.notReached {
      opacity:0;
    }

    .color-ahead-left {
      stop-color:#0581A6;
    }
    .color-ahead-right {
      stop-color:#05A9B8;
    }

    .color-late-left {
      stop-color:#C90C14;
    }
    .color-late-right {
      stop-color:#C90C14;
    }


    .color-maskingGradient-top {
      stop-color:#1B1E23
    }
    .color-maskingGradient-bottom {
      stop-color:#1B1E23
    }

    .color-onTime-left {
      stop-color:#0581A6;
    }
    .color-onTime-right {
      stop-color:#C90C14;
    }

/*    .delivery g image:hover line{
      border:1px solid black;
      stroke:white;
      cursor: hand;

    }*/

    .delivery image:hover {
        height: 55px;
        width: 55px;
        y: -27;
        x: -27;
        cursor: pointer;
    }
    #detailSvg {
      position:absolute;
      left:0;
      top:0;

    }
    .detailName {
      fill: #BFFFEA;
    }
    .detailDeliveryCloseRect {
      opacity:.8;
      fill: #0C0C1A;

    }
    .detailDeliveryRect {
      fill:rgba(26, 48, 71,1);
    }

    .detailInfoRect {
      fill:rgba(26, 48, 71,1);
      position:relative;
    }

    .detailInfoPOC{
      position:relative;
      fill:grey;
    }
    .detailInfoCompanyName {
      fill:white;
    }
    .detailInfoArrivaltime {
      fill:rgb(77,254,220);/*Sam*/
    }
    .detailInfoDelay {
      fill:rgb(212,19,32);
    }
    .detailScheduledLine2 {
      stroke: red;
      stroke-width:    1px;

    }

    .maskingGradient {
      fill: url(#maskingGradient);
    }

    .stations {
    }
    .station{
      fill:#181F2B;
    }
    .station:nth-child(even) {
      fill:#1B1E23;
    }
    .station .name{
      fill: #BFFFEA;
    }

    .workflow {
      stroke: #017AAA;
      stroke-width:    1px;
    }
    .workflow.ahead {
      stroke:#00B4C2;
    }
    .workflow.late {
      stroke:#CF0C13;
      stroke-width:    4px;
    }
    .workflow.notReached {
      stroke:#363667;
      stroke-width:    2px;
    }

    .workflow.aheadGradient {
      stroke: url(#aheadGradient);
      /*stroke-widtstroke-width: 4;h:1px;*/
      fill:none;
      stroke-width: 4;
    }
    .workflow.lateGradient {
      stroke: url(#lateGradient);
      
    }
    .workflow.onTimeGradient {
      stroke: url(#onTimeGradient);
      
    }

    .yAxis {
      /*fill:#D0D1D1;*/
      stroke:#D0D1D1;
    }
    .yAxisDateTimeBox {
      fill:#0D424F;
    }
    .axis .yAxisDateTimeText {
      fill: #BFFFEA;
      font-family: 'Maven Pro', sans-serif;
    }
    .yAxisDateTimeArrow {
      fill: #01FEA9 !important;
      stroke:none !important;
    }

    svg#timeline {
      background-color: #0C0C1A
    }

